VSE: Crash when importing multiple movie clips that include one without audio #93154

Closed
opened 2021-11-17 10:49:09 +01:00 by Kevin · 12 comments

System Information
Operating system: Linux-5.11.0-40-generic-x86_64-with-glibc2.33 64 Bits
Graphics card: GeForce GTX 650 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-16 23:46, hash: 4c988eb3e1
Worked: 2.93.5

Short description of error
When importing more than one video clip at a time in the VSE, if one of them doesn't have an audio track, Blender crashes.

Exact steps for others to reproduce the error

  • File > New > Video Editing
  • In the Sequencer window: Add > Movie
  • In the file browser select multiple videos, making sure that at least one of them doesn't have audio, then confirm
  • Blender crashes
**System Information** Operating system: Linux-5.11.0-40-generic-x86_64-with-glibc2.33 64 Bits Graphics card: GeForce GTX 650 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.91.03 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-16 23:46, hash: `4c988eb3e1` Worked: 2.93.5 **Short description of error** When importing more than one video clip at a time in the VSE, if one of them doesn't have an audio track, Blender crashes. **Exact steps for others to reproduce the error** - `File` > `New` > `Video Editing` - In the Sequencer window: `Add` > `Movie` - In the file browser select multiple videos, making sure that at least one of them doesn't have audio, then confirm - Blender crashes
Author

Added subscriber: @jack.herbert

Added subscriber: @jack.herbert
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Can reproduce the crash on master and 3.0.0 beta

if one of them is an mp4

Hard to say if this is correct. I can even reproduce with one .mkv and .mov file

blender.exe         :0x00007FF7809D5A20  sequencer_add_movie_strip_exec
blender.exe         :0x00007FF78004FC40  wm_handler_fileselect_do
blender.exe         :0x00007FF7800512D0  wm_handlers_do_intern
blender.exe         :0x00007FF780050900  wm_handlers_do
blender.exe         :0x00007FF78004D9D0  wm_event_do_handlers
blender.exe         :0x00007FF780037B20  WM_main
blender.exe         :0x00007FF77FCAF170  main
blender.exe         :0x00007FF7851CFD18  __scrt_common_main_seh
KERNEL32.DLL        :0x00007FFBAD7A7020  BaseThreadInitThunk
ntdll.dll           :0x00007FFBADCC2630  RtlUserThreadStart```
Hi, thanks for the report. Can reproduce the crash on master and 3.0.0 beta > if one of them is an mp4 Hard to say if this is correct. I can even reproduce with one .mkv and .mov file ```blender.exe :0x00007FF7809D5420 sequencer_add_movie_multiple_strips blender.exe :0x00007FF7809D5A20 sequencer_add_movie_strip_exec blender.exe :0x00007FF78004FC40 wm_handler_fileselect_do blender.exe :0x00007FF7800512D0 wm_handlers_do_intern blender.exe :0x00007FF780050900 wm_handlers_do blender.exe :0x00007FF78004D9D0 wm_event_do_handlers blender.exe :0x00007FF780037B20 WM_main blender.exe :0x00007FF77FCAF170 main blender.exe :0x00007FF7851CFD18 __scrt_common_main_seh KERNEL32.DLL :0x00007FFBAD7A7020 BaseThreadInitThunk ntdll.dll :0x00007FFBADCC2630 RtlUserThreadStart```
Author

@PratikPB2123 you're right, it looks like it's related to the stream inside, not the container. So 2 mkv files, one with MP4 (divx) and the other with MP2 streams, don't trigger the bug. But as soon as one stream is H.264, it crashes.

@PratikPB2123 you're right, it looks like it's related to the stream inside, not the container. So 2 mkv files, one with MP4 (divx) and the other with MP2 streams, don't trigger the bug. But as soon as one stream is H.264, it crashes.
Kevin changed title from VSE: Crash when importing multiple movie clips that include a mp4 file to VSE: Crash when importing multiple movie clips that include a least one H.264 streams 2021-11-17 11:37:03 +01:00
Kevin changed title from VSE: Crash when importing multiple movie clips that include a least one H.264 streams to VSE: Crash when importing multiple movie clips that include a least one H.264 stream 2021-11-17 11:38:35 +01:00

Added subscriber: @iss

Added subscriber: @iss

I can't reproduce this issue. Can you provide movie files that cause crash?

I can't reproduce this issue. Can you provide movie files that cause crash?
Author

sure thing: 0001-0005.mkv
(just exported 5 frames of the default scene with the default settings at the lowest possible quality so it would be small, yet importing that at the same time as another video triggers the crash for me)

sure thing: [0001-0005.mkv](https://archive.blender.org/developer/F11821494/0001-0005.mkv) (just exported 5 frames of the default scene with the default settings at the lowest possible quality so it would be small, yet importing that at the same time as another video triggers the crash for me)

This issue was referenced by d8fd575af9

This issue was referenced by d8fd575af9cdb66dcc3e50cc3b1b5c41ad049b4f

Thanks for sample file. This happens because some files have audio track present and some don't. Nothing to do with codec fortunately.

Thanks for sample file. This happens because some files have audio track present and some don't. Nothing to do with codec fortunately.
Author

I see, checking here and that sounds right (pardon the pun)

I see, checking here and that sounds right (pardon the pun)
Kevin changed title from VSE: Crash when importing multiple movie clips that include a least one H.264 stream to VSE: Crash when importing multiple movie clips that include one without audio 2021-11-18 01:39:50 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-11-18 01:40:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93154
No description provided.